# beer-ml

./: LICENSE  README.md  pyproject.toml
beer-ml/: README.md  jsonl_to_db.py  pull_brewersfriend_recipes.py
beer-ml/exports/brewersfriend/: recipes.csv  recipes.db
exports/brewersfriend/: recipes.csv  recipes.db
machine_learning_process/: 1 - Supply Chain Data Prep.ipynb  2 - Supply Chain ML.ipynb  3 - Supply Chain Inference.ipynb  FINA 4075 Intro to AI.ipynb  data_prep_mlp.ipynb  functions_vs_classes.ipynb
machine_learning_process/data/: supply_chain.csv  supply_chain_eda.csv  supply_chain_inference.csv
machine_learning_process/pickles/: data_pipeline.pickle  supply_chain_classifier.pickle
